// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoilingData with S3 folders run single query on S3 folder with 2 copies of the same parquet file 1`] = `
Array [
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": "2016-02-03 17:04:03+00",
    "salary": 150280.17,
    "title": "Accountant IV",
  },
  Object {
    "birthdate": "1/16/1968",
    "cc": "",
    "comments": "",
    "country": "Canada",
    "email": "afreeman1@is.gd",
    "first_name": "Albert",
    "gender": "Male",
    "id": 2,
    "ip_address": "218.111.175.34",
    "last_name": "Freeman",
    "registration_dttm": "2016-02-03 17:04:03+00",
    "salary": 150280.17,
    "title": "Accountant IV",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": "2016-02-03 07:55:29+00",
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "3/8/1971",
    "cc": "6759521864920116",
    "comments": "1E+02",
    "country": "Indonesia",
    "email": "ajordan0@com.com",
    "first_name": "Amanda",
    "gender": "Female",
    "id": 1,
    "ip_address": "1.197.201.2",
    "last_name": "Jordan",
    "registration_dttm": "2016-02-03 07:55:29+00",
    "salary": 49756.53,
    "title": "Internal Auditor",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": "2016-02-03 05:05:31+00",
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": "2016-02-03 05:05:31+00",
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": "2016-02-03 00:36:21+00",
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": "2016-02-03 00:36:21+00",
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "2/1/1960",
    "cc": "6767119071901597",
    "comments": "",
    "country": "Russia",
    "email": "emorgan2@altervista.org",
    "first_name": "Evelyn",
    "gender": "Female",
    "id": 3,
    "ip_address": "7.161.136.94",
    "last_name": "Morgan",
    "registration_dttm": "2016-02-03 01:09:31+00",
    "salary": 144972.51,
    "title": "Structural Engineer",
  },
  Object {
    "birthdate": "2/1/1960",
    "cc": "6767119071901597",
    "comments": "",
    "country": "Russia",
    "email": "emorgan2@altervista.org",
    "first_name": "Evelyn",
    "gender": "Female",
    "id": 3,
    "ip_address": "7.161.136.94",
    "last_name": "Morgan",
    "registration_dttm": "2016-02-03 01:09:31+00",
    "salary": 144972.51,
    "title": "Structural Engineer",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": "2016-02-03 18:29:47+00",
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": "2016-02-03 18:29:47+00",
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
]
`;

exports[`boilingdata with DuckDB run single query (2nd time with cacheHit) 1`] = `
Array [
  Object {
    "congestion_surcharge": 0,
    "dolocationid": 1,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "pulocationid": 1,
    "ratecodeid": 1,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": 1556865341000,
    "tpep_pickup_datetime": 1556865324000,
    "trip_distance": 0,
    "vendorid": 1,
  },
  Object {
    "congestion_surcharge": 0,
    "dolocationid": 1,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "pulocationid": 1,
    "ratecodeid": 1,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": 1560162845000,
    "tpep_pickup_datetime": 1560162758000,
    "trip_distance": 0,
    "vendorid": 1,
  },
]
`;

exports[`boilingdata with DuckDB run single query 1`] = `
Array [
  Object {
    "congestion_surcharge": 0,
    "dolocationid": 1,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "pulocationid": 1,
    "ratecodeid": 1,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": 1556865341000,
    "tpep_pickup_datetime": 1556865324000,
    "trip_distance": 0,
    "vendorid": 1,
  },
  Object {
    "congestion_surcharge": 0,
    "dolocationid": 1,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "pulocationid": 1,
    "ratecodeid": 1,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": 1560162845000,
    "tpep_pickup_datetime": 1560162758000,
    "trip_distance": 0,
    "vendorid": 1,
  },
]
`;

exports[`boilingdata with DuckDB run single query with scan cursor (offset) 1`] = `
Array [
  Object {
    "birthdate": "4/8/1997",
    "cc": "3576031598965625",
    "comments": "",
    "country": "China",
    "email": "driley3@gmpg.org",
    "first_name": "Denise",
    "gender": "Female",
    "id": 4,
    "ip_address": "140.35.109.83",
    "last_name": "Riley",
    "registration_dttm": "2016-02-03 00:36:21+00",
    "salary": 90263.05,
    "title": "Senior Cost Accountant",
  },
  Object {
    "birthdate": "3/27/1992",
    "cc": "",
    "comments": "1E+02",
    "country": "South Korea",
    "email": "jfoster8@yelp.com",
    "first_name": "Jose",
    "gender": "Male",
    "id": 9,
    "ip_address": "132.31.53.61",
    "last_name": "Foster",
    "registration_dttm": "2016-02-03 03:52:53+00",
    "salary": 231067.84,
    "title": "Software Test Engineer I",
  },
  Object {
    "birthdate": "",
    "cc": "5602256255204850",
    "comments": "",
    "country": "South Africa",
    "email": "cburns4@miitbeian.gov.cn",
    "first_name": "Carlos",
    "gender": "",
    "id": 5,
    "ip_address": "169.113.235.40",
    "last_name": "Burns",
    "registration_dttm": "2016-02-03 05:05:31+00",
    "salary": null,
    "title": "",
  },
  Object {
    "birthdate": "3/1/1962",
    "cc": "",
    "comments": "",
    "country": "Bosnia and Herzegovina",
    "email": "hhowell7@eepurl.com",
    "first_name": "Harry",
    "gender": "Male",
    "id": 8,
    "ip_address": "91.235.51.73",
    "last_name": "Howell",
    "registration_dttm": "2016-02-03 06:47:06+00",
    "salary": 186469.43,
    "title": "Web Developer IV",
  },
  Object {
    "birthdate": "2/25/1983",
    "cc": "3583136326049310",
    "comments": "",
    "country": "Indonesia",
    "email": "kwhite5@google.com",
    "first_name": "Kathryn",
    "gender": "Female",
    "id": 6,
    "ip_address": "195.131.81.179",
    "last_name": "White",
    "registration_dttm": "2016-02-03 07:22:34+00",
    "salary": 69227.11,
    "title": "Account Executive",
  },
  Object {
    "birthdate": "12/18/1987",
    "cc": "3582641366974690",
    "comments": "",
    "country": "Portugal",
    "email": "sholmes6@foxnews.com",
    "first_name": "Samuel",
    "gender": "Male",
    "id": 7,
    "ip_address": "232.234.81.197",
    "last_name": "Holmes",
    "registration_dttm": "2016-02-03 08:33:08+00",
    "salary": 14247.62,
    "title": "Senior Financial Analyst",
  },
  Object {
    "birthdate": "1/28/1997",
    "cc": "3574254110301671",
    "comments": "",
    "country": "Nigeria",
    "email": "estewart9@opensource.org",
    "first_name": "Emily",
    "gender": "Female",
    "id": 10,
    "ip_address": "143.28.251.245",
    "last_name": "Stewart",
    "registration_dttm": "2016-02-03 18:29:47+00",
    "salary": 27234.28,
    "title": "Health Coach IV",
  },
]
`;

exports[`boilingdata with DuckDB run single query with scan cursor over the size 1`] = `Array []`;

exports[`boilingdata with promise method can run simple promise based query 1`] = `
Array [
  Object {
    "congestion_surcharge": 0,
    "dolocationid": 1,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "pulocationid": 1,
    "ratecodeid": 1,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": 1556865341000,
    "tpep_pickup_datetime": 1556865324000,
    "trip_distance": 0,
    "vendorid": 1,
  },
  Object {
    "congestion_surcharge": 0,
    "dolocationid": 1,
    "extra": 0,
    "fare_amount": 0,
    "improvement_surcharge": 0.3,
    "mta_tax": 0,
    "passenger_count": 1,
    "payment_type": 2,
    "pulocationid": 1,
    "ratecodeid": 1,
    "store_and_fwd_flag": "N",
    "tip_amount": 0,
    "tolls_amount": 0,
    "total_amount": 0.3,
    "tpep_dropoff_datetime": 1560162845000,
    "tpep_pickup_datetime": 1560162758000,
    "trip_distance": 0,
    "vendorid": 1,
  },
]
`;
